--- a/frontend/src/app/features/auth/components/doctor-register-form/doctor-register-form.component.html
+++ b/frontend/src/app/features/auth/components/doctor-register-form/doctor-register-form.component.html
@@ -49,6 +49,7 @@
           id="cpf_medico"
           name="cpf_medico"
           formControlName="cpf"
+          mask="000.000.000-00"
           type="text"
           required
           class="block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-violet-500 focus:outline-none focus:ring-violet-500 sm:text-sm"
@@ -105,6 +106,7 @@
           type="text"
           id="cep"
           formControlName="cep"
+          mask="00000-000"
           class="block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-violet-500 focus:outline-none focus:ring-violet-500 sm:text-sm"
           placeholder="00000-000"
         />
