--- a/frontend/src/app/features/auth/components/patient-register-form/patient-register-form.component.html
+++ b/frontend/src/app/features/auth/components/patient-register-form/patient-register-form.component.html
@@ -48,6 +48,7 @@
           name="cpf"
           type="text"
           formControlName="cpf"
+          mask="000.000.000-00"
           required
           class="block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-violet-500 focus:outline-none focus:ring-violet-500 sm:text-sm"
           placeholder="000.000.000-00"
@@ -100,6 +101,7 @@
         <input
           type="text"
           id="cep"
+          mask="00000-000"
           formControlName="cep"
           class="block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-violet-500 focus:outline-none focus:ring-violet-500 sm:text-sm"
           placeholder="00000-000"
