--- a/frontend/src/app/features/auth/components/patient-register-form/patient-register-form.component.html
+++ b/frontend/src/app/features/auth/components/patient-register-form/patient-register-form.component.html
@@ -62,6 +62,9 @@
           <span *ngIf="patientForm.get('cpf')?.errors?.['required']"
             >Campo obrigatório.</span
           >
+          <span *ngIf="patientForm.get('cpf')?.errors?.['cpfInvalid']"
+            >O CPF informado é inválido.</span
+          >
         </div>
       </div>
       <div>
@@ -238,10 +241,10 @@
           <span *ngIf="patientForm.get('password')?.errors?.['minlength']"
             >A senha deve ter pelo menos 8 caracteres.</span
           >
+          <span *ngIf="patientForm.get('password')?.errors?.['strong']"
+            >A senha deve conter letras maiúsculas, minúsculas e números.</span
+          >
         </div>
-        <p class="mt-2 text-xs text-gray-500">
-          Mínimo de 8 caracteres, com uma letra maiúscula e um número.
-        </p>
       </div>
       <div>
         <label
