--- a/frontend/src/app/features/dashboard/components/my-doctors/my-doctors.component.html
+++ b/frontend/src/app/features/dashboard/components/my-doctors/my-doctors.component.html
@@ -130,6 +130,22 @@
       </div>
     </div>
 
+    <div>
+      <label class="block text-sm font-medium text-gray-700"
+        >Especialidade*</label
+      >
+      <select 
+        id="specialty"
+        name="specialty"
+        [(ngModel)]="specialty"
+        class="block appearance-none rounded-md border border-gray-300 my-2 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-violet-500 focus:outline-none focus:ring-violet-500 sm:text-sm"
+      >
+        <option value="Neurologia">Neurologia</option>
+        <option value="Geriatria">Geriatria</option>
+        <option value="Outra">Outra</option>
+      </select>
+      </div>
+
     @if (isLoading()) {
     <p class="text-center text-gray-500 py-8">Buscando...</p>
     } @if (searchResults().length > 0) {
